--- a/frontend/partials/header.html
+++ b/frontend/partials/header.html
@@ -37,6 +37,18 @@
                         <span data-i18n="nav.ranking">Ranking</span>
                     </a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="cover-guess-ranking.html">
+                        <i class="bi bi-trophy-fill" aria-hidden="true"></i>
+                        <span data-i18n="nav.coverGuessRanking">Cover Guess Ranking</span>
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="how-to-play.html">
+                        <i class="bi bi-question-circle" aria-hidden="true"></i>
+                        <span data-i18n="footer.howToPlay">How to play</span>
+                    </a>
+                </li>
                 <li class="nav-item" id="nav-report-bug" style="display:none">
                     <a class="nav-link" href="report-bug.html">
                         <i class="bi bi-bug" aria-hidden="true"></i>
@@ -86,7 +98,7 @@
         </ul>
     </div>
   </div>
-  <a href="index.html" class="logo">
-        <img src="../img/logo.png" style="width:300px" alt="AlbumGuessr">
+  <a href="index.html" class="logo" style="display: inline-block; padding: 0; margin: 0; line-height: 0;">
+        <img src="../img/logo.png" style="width:300px; display: block;" alt="AlbumGuessr">
     </a>
 </header>
